build/cluster/003-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: blob-server
spec:
  selector:
    app: blob-server
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blob-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blob-server
  template:
    metadata:
      labels:
        app: blob-server
    spec:
      containers:
        - name: blob-server
          image: $IMAGE
          ports:
            - containerPort: 8080
          imagePullPolicy: $IMAGE_POLICY
          command: ["/bin/sh", "-c", "./server/main.exe"]
$NODE_SELECTOR
