build/cluster/004-notes.yaml
apiVersion: v1
kind: Service
metadata:
  name: blob-notes
spec:
  selector:
    app: blob-notes
  ports:
    - port: 8280
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blob-notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blob-notes
  template:
    metadata:
      labels:
        app: blob-notes
    spec:
      containers:
        - name: blob-notes
          image: $NOTES_IMAGE
          ports:
            - containerPort: 80
          imagePullPolicy: $IMAGE_POLICY
